s'elimina imagen.jpg i s'actualitza la pagina amb una nova imatge

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			seves xarxes socials, deixa entreveure que la seva decisió ja ha estat presa. 
 		</p>
 		
-		<img src="imagen.jpg" alt="Andrés Iniesta" width="100%">
+		<img src="https://www.elprogreso.es/asset/thumbnail,1920,1080,center,center/media/elprogreso/images/2024/03/22/2024032217581797379.jpg" alt="Andrés Iniesta" width="100%">
 		
 		<h2>Fonts de la notícia</h2>
 		<ol>
